<resources>
    <string name="app_name">MubeeGo</string>
    <string name="title_movie">MubeeGo</string>
    <string name="title_tvshow">TV Shows</string>
    <string name="title_favorite">Favorites</string>
    <string name="welcome_details">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="sinopsis">Synopsis</string>
    <string name="season">Season</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="app_id" translatable="false">284626842090</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="poster">Poster</string>
    <string name="dummy_title">Movie / Tv Show Title</string>
    <string name="dummy_date">Jan 01, 2021</string>
    <string name="title_activity_tv_show_detail">Tv Show Detail</string>
    <string name="dummy_duration">0 h 0 m</string>
    <string name="dummy_genre">Movie / Tv Shows Genres</string>
    <string name="error_while_getting_data">Error while getting data</string>
    <string name="addedToFavorite">Added to favorites</string>
    <string name="removedFromFavorite">Removed from favorites</string>
    <string name="title_activity_search">Search Movie or TV Show</string>
    <string name="search_hint">Search movie or tv show by title …</string>
    <string name="search_title">Search …</string>
    <string name="trending_this_week">Trending this Week!</string>
    <string name="nav_header_title">MubeeGo</string>
    <string name="nav_header_subtitle">support@mubeego.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_favorite">FavoriteActivity</string>

    <string name="invalid_format_email">Format email tidak valid</string>
    <string name="empty_email_error">Email tidak boleh kosong</string>
    <string name="sign_in">Sign in to your \nAccount</string>
    <string name="sign_in_description">Enter your email and password to log in </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_description">Create an account to continue!</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="doesnt_have_account">Don’t have an account?</string>
    <string name="google_login">Continue with Google</string>

    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="back_button">Back Button</string>

    <string name="full_name">Full Name</string>
    <string name="set_password">Set Password</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Playlist -->
    <string name="no_playlists_found">No Playlists Found</string>
    <string name="create_playlist_message">Create your first playlist to start organizing your favorite movies and TV shows</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="make_playlist_public">Make this playlist public</string>
    <string name="playlist_visibility_description">Public playlists can be viewed by all users. Private playlists are only visible to you.</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
</resources>
