<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <LinearLayout
        android:id="@+id/search_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/nav_header_desc"/>

        <AutoCompleteTextView
            android:id="@+id/auto_complete_search"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:paddingStart="16dp"
            android:background="@drawable/search_edittext_bg"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/search_title"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_picker_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="First Date"
            android:textAllCaps="false"
            android:textSize="14sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Last Date"
            android:textAllCaps="false"
            android:textSize="14sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_search_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upcoming"
            android:textAllCaps="false"
            android:textSize="14sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trending"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/date_picker_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_movies_tvshows" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>